--- a/courses/009 发送以太币.md
+++ b/courses/009 发送以太币.md
@@ -6,6 +6,7 @@
 - 如果转账失败，会自动revert（即，回滚交易）
 - 返回值：void
 - 适用：简单的以太币转账，需要自动回滚失败，无需处理复杂的错误情况。
+- 理解：将 ETH 从合约中转移到其他地址。
 ```
 function transferETH(address payable _to, uint256 amount) external payable{
     _to.transfer(amount);
@@ -20,6 +21,7 @@ function transferETH(address payable _to, uint256 amount) external payable{
 - 如果转账失败，不会自动revert（即，不会回滚交易）
 - 返回值：bool，代表成功与否
 - 适用：希望在转账失败时采取某些操作的场景。
+- 理解：将 ETH 从合约中转移到其他地址。
 ```
 function sendETH(address payable _to, uint256 amount) external payable{
     // 处理下send的返回值，如果失败，手动revert交易并发送error
