--- a/courses/032 荷兰拍卖.md
+++ b/courses/032 荷兰拍卖.md
@@ -1,14 +1,6 @@
 #### 概念
 - 荷兰拍卖（Dutch Auction）是一种特殊的拍卖形式。 
-- 亦称“减价拍卖”，它是指拍卖标的的竞价由高到低依次递减直到第一个竞买人应价（达到或超过底价）时击槌成交的一种拍卖。
-
-#### 案例
-- 通过荷兰拍卖发售ERC721标准的NFT。
-- 在币圈，很多NFT通过荷兰拍卖发售，其中包括Azuki和World of Women，其中Azuki通过荷兰拍卖筹集了超过8000枚ETH
-
-#### 缘由
-- 荷兰拍卖的价格由最高慢慢下降，能让项目方获得最大的收入。
-- 卖持续较长时间（通常6小时以上），可以避免gas war。
+- 亦称“减价拍卖”，它是指拍卖标的的竞价由高到低依次递减，直到第一个竞买人应价（达到或超过底价）时击槌成交的一种拍卖。
 
 #### 简化的拍卖活动流程
 - 项目上线拍卖合约：项目方会在区块链上部署一个智能合约，这个合约包含了拍卖的所有逻辑和规则。
@@ -25,6 +17,15 @@
 - 单一销售：也就是"简化的拍卖活动流程"，这是最常见的模式。拍卖只涉及一件商品或NFT，拍卖在有买家接受当前价格时结束。
 - 分批销售：在这种模式下，拍卖会同时出售多件相同或相似的商品（例如多个相同的NFT）。买家可以在当前价格购买其中一件，拍卖会继续进行，直到所有商品都被出售或价格降至最低。
 - 多重销售：在这种模式中，买家可以选择购买多件商品，且可能在拍卖的不同阶段出价。允许买家在拍卖过程中根据价格变化进行多次出价。
+
+#### 案例
+##### NFT市场：
+- Foundation：这个NFT平台采用荷兰式拍卖模式，创作者可以设定一个起始价格，并逐渐降低价格，直到有人接受购买。这种模式吸引了不少买家，特别是在高需求的作品上。
+- Nifty Gateway：某些艺术家在Nifty Gateway进行的拍卖也使用了荷兰式拍卖，允许买家在价格下降的过程中进行抢购。
+##### 代币发行:
+- CoinList：一些项目在CoinList上采用荷兰式拍卖的方式来发行代币，允许投资者在价格逐步下降的过程中进行竞标。
+##### 特定项目:
+- Uniswap V3：在某些流动性池的配置中，Uniswap V3 采用了荷兰式拍卖机制来确定初始价格。
 
 #### 代码示例：
 - contract/TestDutchAuction.sol
