--- a/courses/032 英式拍卖.md
+++ b/courses/032 英式拍卖.md
@@ -1,5 +1,5 @@
 #### 概念
-- 荷兰拍卖（English Auction）是一种常见的拍卖形式。 
+- 英式拍卖（English Auction）是一种常见的拍卖形式。 
 - 亦称“加价拍卖”，它是指拍卖标的的竞价由低到高依次递增，直到拍卖结束时，出价最高的人获胜。
 
 #### 简化的拍卖活动流程
