--- a/courses/033 随机数.md
+++ b/courses/033 随机数.md
@@ -26,7 +26,7 @@ contract RandomNumber {
 
 ##### 获取随机数链下方式：
 - 机制：使用外部预言机服务(如，Chainlink VRF)，来返回随机数。
-- 优点：不可预测，不可被操控，减少了被操控的风险，安全性高；去中心化；适应性强。
+- 优点：不可预测，减少了被操控的风险，安全性高；去中心化；适应性强。
 - 缺点：支付 LINK 代币作为服务费用；异步性(根据策略编写业务，用户可能会有延迟体验)、复杂性。
 - 适用场景：游戏、NFT、博彩等，对随机数高要求的应用。
 - 示例：使用 Chainlink VRF
