--- a/courses/034 包装以太币.md
+++ b/courses/034 包装以太币.md
@@ -27,7 +27,7 @@
 　
 
 #### 源码：
-- 合约地址：0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2 
+- 合约地址：```0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2```
 ```
 pragma solidity ^0.4.18;
 
