--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -54,6 +54,40 @@
 - 由于区块链本身是封闭的环境，智能合约无法直接访问外部数据，比如当前的天气状况、汇率、股票价格等现实世界的数据。
 - 预言机就充当了连接区块链内外部世界的桥梁，使得智能合约可以根据外部事件的结果来执行相应的动作。
 
+　
 
+**DeFi**
+- 全称 Decentralized Finance：去中心化的金融
+- 是指建立在区块链技术之上的一种金融服务形式，其目的是去中介化，绕过传统金融系统中的中央机构，如银行或政府，直接通过区块链网络提供金融服务。
+- 这些服务可以包括借贷、交易、保险等传统金融活动。
+- DeFi 应用通常基于智能合约，并且主要运行在以太坊这样的区块链平台上。
 
+　
 
+**DEX**
+- 全称 Decentralized Exchange：去中心化的交易所
+- 是一种特殊的加密货币交易平台，它建立在区块链网络之上，允许用户直接进行点对点的加密货币交易，而不需要通过传统的中介机构，如中心化交易所。
+- 在去中心化交易所中，用户对自己的资产拥有完全的控制权，交易通常通过智能合约来执行，这有助于减少交易对手风险，并且使得整个过程更加透明和安全。
+- 与中心化交易所相比，DEX 可能会有不同的特点，比如更高的安全性、隐私保护以及对于新币种的支持更为灵活，但同时也可能面临较低的流动性和较高的交易费用等问题。
+
+　
+
+**AMM**
+- 全称 Automated Market Maker：做市商
+- 是一种无需传统中介的交易机制。通过算法，用户可以在去中心化交易所（DEX）上进行代币交换，而不依赖订单簿或中介。
+
+　
+
+**CSMM**
+- 全称 Constant Sum Market Maker：恒定总和自动做市商
+- 恒定总和做市商的核心公式是： 𝑥+𝑦=𝐶
+- x 和 𝑦，分别代表池中的两种代币的数量，
+- C 是一个恒定值。这意味着两种代币的数量总和不变。
+
+　
+
+**CPMM**
+- 全称 Constant Product Market Maker：恒定乘积自动做市商
+- 恒定总和做市商的核心公式是： 𝑥×𝑦=k
+- x 和 𝑦，分别代表池中的两种代币的数量，
+- k 是一个恒定值。这意味着无论交易如何进行，两个代币的乘积始终保持不变。
