--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -80,7 +80,7 @@
 
 **CSMM**
 - 全称 Constant Sum Market Maker：恒定总和自动做市商
-- 恒定总和做市商的核心公式是： 𝑥+𝑦=𝐶
+- 恒定总和做市商的核心公式是： 𝑥 + 𝑦 = 𝐶
 - x 和 𝑦，分别代表池中的两种代币的数量，
 - C 是一个恒定值。这意味着两种代币的数量总和不变。
 
@@ -88,6 +88,13 @@
 
 **CPMM**
 - 全称 Constant Product Market Maker：恒定乘积自动做市商
-- 恒定总和做市商的核心公式是： 𝑥×𝑦=k
+- 恒定总和做市商的核心公式是： 𝑥 × 𝑦 = k
 - x 和 𝑦，分别代表池中的两种代币的数量，
 - k 是一个恒定值。这意味着无论交易如何进行，两个代币的乘积始终保持不变。
+
+　
+
+**Slippage**
+- 滑点：当执行交易时实际价格与预期价格之间的差异。
+- 具体来说，当你在一个市场下单购买或出售资产时，理想情况下你会按照你所看到的价格成交。
+- 然而，在实际交易过程中，由于多种因素的影响，最终成交的价格可能会有所不同。这种差异就是滑点。
