--- a/courses/035 自动做市商_恒定总和.md
+++ b/courses/035 自动做市商_恒定总和.md
@@ -21,7 +21,7 @@
 #### 理解恒定和
 - 在每次swap过程中，确实保持 𝑥 + 𝑦 = 𝐶
 - 在每次addLiquidity后，𝑥 + 𝑦 的总量变为 𝐶`，但是，这并不意味着 𝑥 + 𝑦 = 𝐶 的关系被破坏了
-- 之后仍然遵循 𝑥` + 𝑦` = 𝐶`
+- 之后仍然遵循 𝑥^ + 𝑦^ = 𝐶^
 - 此处表达的是，新的总量𝐶`，是更新后的常数。
 
 　
@@ -237,4 +237,4 @@ contract CSAMM {
 - 理解"代币数量"单位
 - 理解"流动性份额"单位
 - 遵循 𝑥 + 𝑦 = 𝐶
-- 遵循 𝑥` + 𝑦` = 𝐶`
+- 遵循 𝑥^ + 𝑦^ = 𝐶^
