--- a/courses/035 自动做市商_恒定总和.md
+++ b/courses/035 自动做市商_恒定总和.md
@@ -93,7 +93,7 @@ contract CSAMM {
     {
         /*
             - 在调取前，通常会提示用户，"授权给本合约足额的代币"
-            - 交换操作，通常会产生手续费，被示例中为"千分之三"
+            - 交换操作，通常会产生手续费，本示例中为"千分之三"
 
             reserve0 + reserve1 = Constant
             
