--- a/courses/035 自动做市商_恒定总和.md
+++ b/courses/035 自动做市商_恒定总和.md
@@ -5,7 +5,7 @@
 　
 
 #### 公式
-- 恒定总和做市商的核心公式是： 𝑥 + 𝑦 = 𝐶
+- 恒定总和做市商的核心公式是： ```𝑥 + 𝑦 = 𝐶```
 - x 和 𝑦，分别代表池中的两种代币的数量，
 - C 是一个恒定值。这意味着两种代币的数量总和不变。
 
@@ -19,9 +19,9 @@
 　
 
 #### 理解恒定和
-- 在每次swap过程中，确实保持 𝑥 + 𝑦 = 𝐶
-- 在每次addLiquidity后，𝑥 + 𝑦 的总量变为 𝐶^，但是，这并不意味着 𝑥 + 𝑦 = 𝐶 的关系被破坏了
-- 之后仍然遵循 𝑥^ + 𝑦^ = 𝐶^
+- 在每次swap过程中，确实保持 ```𝑥 + 𝑦 = 𝐶```
+- 在每次addLiquidity后，```𝑥 + 𝑦``` 的总量变为 𝐶^，但是，这并不意味着 ```𝑥 + 𝑦 = 𝐶``` 的关系被破坏了
+- 之后仍然遵循 ```𝑥^ + 𝑦^ = 𝐶^```
 - 此处表达的是，新的总量𝐶^，是更新后的常数。
 
 　
@@ -146,7 +146,6 @@ contract CSAMM {
         /*
             - 在调取前，通常会提示用户，"授权给该合约足额的代币"
             - 用户让合约操控自己的两种代币，为自己增加了"流动性份额"，也增加了"合约的代币储备量"
-
         */
 
         // 把用户的代币，转账到合约
@@ -179,8 +178,11 @@ contract CSAMM {
         }
 
         require(shares > 0, "shares = 0");
+
+        // 为用户增加(铸造)流动性份额
         _mint(msg.sender, shares);
 
+        // 刷新代币储备量
         _update(bal0, bal1);
     }
 
@@ -207,9 +209,13 @@ contract CSAMM {
         d0 = (reserve0 * _shares) / totalSupply;
         d1 = (reserve1 * _shares) / totalSupply;
 
+        // 减少(销毁)用户的流行性份额
         _burn(msg.sender, _shares);
+
+        // 刷新代币储备量
         _update(reserve0 - d0, reserve1 - d1);
 
+        // 返还给用户代币数量
         if (d0 > 0) {
             token0.transfer(msg.sender, d0);
         }
@@ -236,5 +242,9 @@ contract CSAMM {
 #### 代码重点：
 - 理解"代币数量"单位
 - 理解"流动性份额"单位
-- 遵循 𝑥 + 𝑦 = 𝐶
-- 遵循 𝑥^ + 𝑦^ = 𝐶^
+- 遵循 ```𝑥 + 𝑦 = 𝐶```
+- 遵循 ```𝑥^ + 𝑦^ = 𝐶^```
+- ```swap```操作中，会额外扣除用户的代币数量，作为手续费，储备在代币池中
+- 此处，手续费会累积到流动性池中，随着时间的推移，流动性份额的价值会增加。
+- ```addLiquidity```操作后，用户的流动性份额会增加
+- ```removeLiquidity```操作后，用户的流动性份额会减少，同时返回给用户代币
