--- a/courses/035 自动做市商_恒定总和.md
+++ b/courses/035 自动做市商_恒定总和.md
@@ -98,14 +98,14 @@ contract CSAMM {
             reserve0 + reserve1 = Constant
             
             ==> 如果 _tokenIn == address(token0)
-            ==> (reserve0 + _amountIn) + (reserve1 - _amountOut - fee) = Constant
-            ==> _amountIn - _amountOut - fee = 0
-            ==> _amountOut = _amountIn - fee
+            ==> (reserve0 + _amountIn) + (reserve1 - _amountOut) = Constant
+            ==> _amountIn - _amountOut = 0
+            ==> _amountOut = _amountIn
 
             ==> 如果 _tokenIn == address(token1)
-            ==> (reserve0 - _amountOut - fee) + (reserve1 + _amountIn) = Constant                    
-            ==> _amountIn - _amountOut - fee = 0
-            ==> _amountOut = _amountIn - fee
+            ==> (reserve0 - _amountOut) + (reserve1 + _amountIn) = Constant                    
+            ==> _amountIn - _amountOut = 0
+            ==> _amountOut = _amountIn
         */
 
         require(
