--- a/courses/035 自动做市商_恒定总和.md
+++ b/courses/035 自动做市商_恒定总和.md
@@ -125,6 +125,7 @@ contract CSAMM {
         uint256 amountIn = tokenIn.balanceOf(address(this)) - resIn;
 
         // fee 千分之三的手续费
+        // amountOut = amountIn * (100% - 0.3%)
         amountOut = (amountIn * 997) / 1000;
 
         (uint256 res0, uint256 res1) = isToken0
