--- a/courses/035 自动做市商_恒定总和.md
+++ b/courses/035 自动做市商_恒定总和.md
@@ -80,7 +80,7 @@ contract CSAMM {
         totalSupply -= _amount;
     }
 
-    // 内部函数：更新储备量
+    // 内部函数：更新代币储备量
     function _update(uint256 _res0, uint256 _res1) private {
         reserve0 = _res0;
         reserve1 = _res1;
@@ -93,25 +93,13 @@ contract CSAMM {
     {
         /*
             - 在调取前，通常会提示用户，"授权给本合约足额的代币"
-            - 交换操作，通常会产生手续费，本示例中为"千分之三"
-
-            reserve0 + reserve1 = Constant
-            
-            ==> 如果 _tokenIn == address(token0)
-            ==> (reserve0 + _amountIn) + (reserve1 - _amountOut) = Constant
-            ==> _amountIn - _amountOut = 0
-            ==> _amountOut = _amountIn
-
-            ==> 如果 _tokenIn == address(token1)
-            ==> (reserve0 - _amountOut) + (reserve1 + _amountIn) = Constant                    
-            ==> _amountIn - _amountOut = 0
-            ==> _amountOut = _amountIn
         */
 
         require(
             _tokenIn == address(token0) || _tokenIn == address(token1),
             "invalid token"
         );
+        require(_amountIn > 0, "amount in = 0");
 
         bool isToken0 = (_tokenIn == address(token0));
 
@@ -120,12 +108,27 @@ contract CSAMM {
             ? (token0, token1, reserve0, reserve1)
             : (token1, token0, reserve1, reserve0);
 
-        // 本合约直接使用"授权转账"，从用户地址，转账到本合约
+        /*
+            - 交换操作，通常会产生手续费，本示例中为"千分之三"
+
+            - 使用"恒定"公式，作为推演出发点
+            - 𝑥 + 𝑦 = 𝐶
+            resIn + resOut = 𝐶
+
+            ==> (resIn + _amountIn) + (resOut - _amountOut) = 𝐶 = resIn + resOut
+            ==> _amountIn - _amountOut = 0
+            ==> _amountIn - _amountOut = 0
+            ==> _amountOut = _amountIn
+            ==> _amountOut = _amountIn * (100% - 0.3%)
+            ==> _amountOut = _amountIn * 99.7%
+            ==> _amountOut = (_amountIn * 997) / 1000
+        */            
+
+        // 把用户的代币，使用"授权转账"到合约
         tokenIn.transferFrom(msg.sender, address(this), _amountIn);
         uint256 amountIn = tokenIn.balanceOf(address(this)) - resIn;
 
         // fee 千分之三的手续费
-        // amountOut = amountIn * (100% - 0.3%)
         amountOut = (amountIn * 997) / 1000;
 
         (uint256 res0, uint256 res1) = isToken0
@@ -149,7 +152,7 @@ contract CSAMM {
             - 用户让合约操控自己的两种代币，为自己增加了"流动性份额"，也增加了"合约的代币储备量"
         */
 
-        // 把用户的代币，转账到合约
+        // 把用户的代币，使用"授权转账"到合约
         token0.transferFrom(msg.sender, address(this), _amount0);
         token1.transferFrom(msg.sender, address(this), _amount1);
 
@@ -162,6 +165,7 @@ contract CSAMM {
         uint256 d1 = bal1 - reserve1;
 
         /*
+            - 使用"增量比例"公式，作为推演出发点
             a = 用户带来新增的代币总数          (单位：代币数量)
             L = 合约的代币储备总量             (单位：代币数量)            
             s = 需要为用户增加的"流动性份额"    (单位：流动性份额)
@@ -193,6 +197,7 @@ contract CSAMM {
         returns (uint256 d0, uint256 d1)
     {
         /*
+            - 使用"减量比例"公式，作为推演出发点
             a = 最终用户减去的代币总数          (单位：代币数量)
             L = 合约的代币储备总量             (单位：代币数量)            
             s = 需要为用户减去的"流动性份额"    (单位：流动性份额)
