--- a/courses/035 自动做市商_恒定总和.md
+++ b/courses/035 自动做市商_恒定总和.md
@@ -112,16 +112,13 @@ contract CSAMM {
             - 交换操作，通常会产生手续费，本示例中为"千分之三"
 
             - 使用"恒定"公式，作为推演出发点
-            - 𝑥 + 𝑦 = 𝐶
-            resIn + resOut = 𝐶
-
-            ==> (resIn + _amountIn) + (resOut - _amountOut) = 𝐶 = resIn + resOut
-            ==> _amountIn - _amountOut = 0
-            ==> _amountIn - _amountOut = 0
-            ==> _amountOut = _amountIn
-            ==> _amountOut = _amountIn * (100% - 0.3%)
-            ==> _amountOut = _amountIn * 99.7%
-            ==> _amountOut = (_amountIn * 997) / 1000
+            => 𝑥 + 𝑦 = 𝐶
+            => (𝑥 + △𝑥) + (𝑦 - △𝑦) = 𝐶
+            => △𝑦 = △𝑥
+            => △𝑦 = △𝑥 x (100% - 0.3%)
+            => △𝑦 = △𝑥 x (99.7%)
+            => △𝑦 = △𝑥 x 997 / 1000
+            => _amountOut = _amountIn x 997 / 1000
         */            
 
         // 把用户的代币，使用"授权转账"到合约
@@ -150,6 +147,16 @@ contract CSAMM {
         /*
             - 在调取前，通常会提示用户，"授权给该合约足额的代币"
             - 用户让合约操控自己的两种代币，为自己增加了"流动性份额"，也增加了"合约的代币储备量"
+
+            - 使用"增量比例"公式，作为推演出发点
+            (△𝑥 + △𝑦)   = 用户带来新增的代币总数        (单位：代币数量)
+            (𝑥 + 𝑦)     = 合约的代币储备总量            (单位：代币数量)            
+            shares      = 需要为用户增加的"流动性份额"   (单位：流动性份额)
+            totalSupply = 总流动性份额                  (单位：流动性份额)
+
+            => 遵循同一单位做比例
+            => ((𝑥 + 𝑦) + (△𝑥 + △𝑦)) / (𝑥 + 𝑦) = (totalSupply + shares) / totalSupply
+            => shares = (△𝑥 + △𝑦) x totalSupply / (𝑥 + 𝑦)
         */
 
         // 把用户的代币，使用"授权转账"到合约
@@ -163,18 +170,6 @@ contract CSAMM {
         // 计算新增的储备量
         uint256 d0 = bal0 - reserve0;
         uint256 d1 = bal1 - reserve1;
-
-        /*
-            - 使用"增量比例"公式，作为推演出发点
-            a = 用户带来新增的代币总数          (单位：代币数量)
-            L = 合约的代币储备总量             (单位：代币数量)            
-            s = 需要为用户增加的"流动性份额"    (单位：流动性份额)
-            T = 总流动性份额                   (单位：流动性份额)
-
-            => 遵循同一单位做比例
-            => (L + a) / L = (T + s) / T
-            => s = a * T / L
-        */
 
         if (totalSupply > 0) {
             shares = ((d0 + d1) * totalSupply) / (reserve0 + reserve1);
@@ -198,20 +193,18 @@ contract CSAMM {
     {
         /*
             - 使用"减量比例"公式，作为推演出发点
-            a = 最终用户减去的代币总数          (单位：代币数量)
-            L = 合约的代币储备总量             (单位：代币数量)            
-            s = 需要为用户减去的"流动性份额"    (单位：流动性份额)
-            T = 总流动性份额                   (单位：流动性份额)
+            (△𝑥 + △𝑦)   = 用户带来减去的代币总数        (单位：代币数量)
+            (𝑥 + 𝑦)     = 合约的代币储备总量            (单位：代币数量)            
+            shares      = 需要为用户减去的"流动性份额"   (单位：流动性份额)
+            totalSupply = 总流动性份额                  (单位：流动性份额)
 
             => 遵循同一单位做比例
-            => (L - a) / L = (T - s) / T
-            => a / L = s / T
-            => a = L * s / T
-            => (d0 + d1) = (reserve0 + reserve1)* s/T
-                         = reserve0*s/T + reserve1*s/T
-            => d0 = reserve0*s/T
-            => d1 = reserve1*s/T
+            => ((𝑥 + 𝑦) - (△𝑥 + △𝑦)) / (𝑥 + 𝑦) = (totalSupply - shares) / totalSupply
+            => (△𝑥 + △𝑦) = (𝑥 + 𝑦) x shares / totalSupply
+            => △𝑥 = 𝑥 x shares / totalSupply
+            => △𝑦 = 𝑦 x shares / totalSupply
         */
+
         d0 = (reserve0 * _shares) / totalSupply;
         d1 = (reserve1 * _shares) / totalSupply;
 
