--- a/courses/036 自动做市商_恒定乘积.md
+++ b/courses/036 自动做市商_恒定乘积.md
@@ -143,11 +143,23 @@ contract CPAMM {
             - 在调取前，通常会提示用户只需要输入一种代币的数量，而另一种代币的数量会根据当前的储备比例自动计算。这样就避免了用户需要手动计算比例的问题，使得过程更加直观和用户友好。
             - 用户让合约操控自己的两种代币，为自己增加了"流动性份额"，也增加了"合约的代币储备量"
 
-            - 使用"比例恒定"公式，来限制 输入代币量 的关系：
-            => 
+            - 基础数据介绍
+            L0 = √(𝑥 x 𝑦)                           = "开根号"，代表当前流动性池子的价值         (单位：流动性份额)
+            L1 = √((𝑥 + △𝑥) × (𝑦 + △𝑦))            = "开根号"，代表添加代币后流动性池子的价值    (单位：流动性份额)
+            shares                                  = 需要为用户增加的"流动性份额"               (单位：流动性份额)
+            totalSupply                             = 总流动性份额                              (单位：流动性份额)
 
-            - 使用"开根号"公式，来代表当前流动性池子的价值
-            => √(reserve0 * reserve1)
+            - 使用"比例恒定"公式，来限制 输入代币量 的关系：
+            =>  (𝑥 + △𝑥) × (𝑦 + △𝑦) = k
+            =>  𝑥 / 𝑦 = (𝑥 + △𝑥) / (𝑦 + △𝑦)
+            =>  △𝑥 = △𝑦 x 𝑥 / 𝑦
+            =>  △𝑦 = △𝑥 x 𝑦 / 𝑥
+
+            - "流动性对等"公式
+            => L0 / L1 = totalSupply / (totalSupply + shares)
+            => shares = totalSupply x (L1 - L0) / L0
+            => shares = 省去推导过程..........
+            => shares = totalSupply x ( △𝑦 x √(y) ) / y
         */
 
         if (reserve0 > 0 || reserve1 > 0) {
@@ -315,3 +327,4 @@ contract CPAMM {
     }
 }
 ```
+- $shares = totalSupply · (\frac{△y}{y})$
