--- a/courses/035 自动做市商_恒定总和.md
+++ b/courses/035 自动做市商_恒定总和.md
@@ -148,14 +148,14 @@ contract CSAMM {
             - 在调取前，通常会提示用户，"授权给该合约足额的代币"
             - 用户让合约操控自己的两种代币，为自己增加了"流动性份额"，也增加了"合约的代币储备量"
 
-            - 使用"增量比例"公式，作为推演出发点
+            - 基础数据介绍
             (△𝑥 + △𝑦)   = 用户带来新增的代币总数        (单位：代币数量)
             (𝑥 + 𝑦)     = 合约的代币储备总量            (单位：代币数量)            
             shares      = 需要为用户增加的"流动性份额"   (单位：流动性份额)
             totalSupply = 总流动性份额                  (单位：流动性份额)
 
-            => 遵循同一单位做比例
-            => ((𝑥 + 𝑦) + (△𝑥 + △𝑦)) / (𝑥 + 𝑦) = (totalSupply + shares) / totalSupply
+            - 使用"增量比例"公式推演，遵循同一单位做比例
+            => (𝑥 + 𝑦) / ((𝑥 + 𝑦) + (△𝑥 + △𝑦)) = totalSupply / (totalSupply + shares)
             => shares = (△𝑥 + △𝑦) x totalSupply / (𝑥 + 𝑦)
         */
 
@@ -192,14 +192,14 @@ contract CSAMM {
         returns (uint256 d0, uint256 d1)
     {
         /*
-            - 使用"减量比例"公式，作为推演出发点
+            - 基础数据介绍
             (△𝑥 + △𝑦)   = 用户带来减去的代币总数        (单位：代币数量)
             (𝑥 + 𝑦)     = 合约的代币储备总量            (单位：代币数量)            
             shares      = 需要为用户减去的"流动性份额"   (单位：流动性份额)
             totalSupply = 总流动性份额                  (单位：流动性份额)
 
-            => 遵循同一单位做比例
-            => ((𝑥 + 𝑦) - (△𝑥 + △𝑦)) / (𝑥 + 𝑦) = (totalSupply - shares) / totalSupply
+            - 使用"减量比例"公式推演，遵循同一单位做比例
+            => (𝑥 + 𝑦) / ((𝑥 + 𝑦) - (△𝑥 + △𝑦)) = totalSupply / (totalSupply - shares)
             => (△𝑥 + △𝑦) = (𝑥 + 𝑦) x shares / totalSupply
             => △𝑥 = 𝑥 x shares / totalSupply
             => △𝑦 = 𝑦 x shares / totalSupply
