Update 037 自动做市商_恒定乘积 - 推导1.md

--- a/courses/037 自动做市商_恒定乘积 - 推导1.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导1.md
@@ -46,3 +46,5 @@
 - $shares = totalSupply · (\frac{△y}{y}+1 - 1)$
 -
 - $shares = totalSupply · (\frac{△y}{y})$
+- 如果换成x系数
+- $shares = totalSupply · (\frac{△x}{x})$
