--- a/courses/036 自动做市商_恒定乘积.md
+++ b/courses/036 自动做市商_恒定乘积.md
@@ -149,6 +149,8 @@ contract CPAMM {
             shares                                  = 需要为用户增加的"流动性份额"               (单位：流动性份额)
             totalSupply                             = 总流动性份额                              (单位：流动性份额)
 
+            - 说明：使用代币数量，指向流动性价值，使用"开根号"的原因是，因为"开根号"可以更好的表达线性，如果去掉"开根号"，那么流动性的表达就是抛物线。
+
             - 使用"比例恒定"公式，来限制 输入代币量 的关系：
             =>  (𝑥 + △𝑥) × (𝑦 + △𝑦) = k
             =>  𝑥 / 𝑦 = (𝑥 + △𝑥) / (𝑦 + △𝑦)
@@ -161,7 +163,7 @@ contract CPAMM {
             => shares = ......(详细推导过程，见037)
             => shares = totalSupply x △𝑥 / 𝑥
             => shares = totalSupply x △𝑦 / 𝑦
-            
+
             - 为了防止用户提供的流动性过大，一般结论为取以上2个shares的较小值。
         */
 
@@ -196,41 +198,13 @@ contract CPAMM {
         returns (uint256 amount0, uint256 amount1)
     {
         /*
-        Claim
-        dx, dy = amount of liquidity to remove
-        dx = s / T * x
-        dy = s / T * y
-
-        Proof
-        Let's find dx, dy such that
-        v / L = s / T
-        
-        where
-        v = f(dx, dy) = sqrt(dxdy)
-        L = total liquidity = sqrt(xy)
-        s = shares
-        T = total supply
-
-        --- Equation 1 ---
-        v = s / T * L
-        sqrt(dxdy) = s / T * sqrt(xy)
-
-        Amount of liquidity to remove must not change price so 
-        dx / dy = x / y
-
-        replace dy = dx * y / x
-        sqrt(dxdy) = sqrt(dx * dx * y / x) = dx * sqrt(y / x)
-
-        Divide both sides of Equation 1 with sqrt(y / x)
-        dx = s / T * sqrt(xy) / sqrt(y / x)
-           = s / T * sqrt(x^2) = s / T * x
-
-        Likewise
-        dy = s / T * y
+            - 基础数据介绍
+            L = √(𝑥 x 𝑦)                            = "开根号"，代表当前流动性池子的价值         (单位：流动性份额)
+            △L = √(△𝑥 x △𝑦)                       = "开根号"，代表添加最终返还流动性池子的价值    (单位：流动性份额)
+            shares                                  = 需要为用户增加的"流动性份额"               (单位：流动性份额)
+            totalSupply                             = 总流动性份额                              (单位：流动性份额)            
         */
 
-        // bal0 >= reserve0
-        // bal1 >= reserve1
         uint256 bal0 = token0.balanceOf(address(this));
         uint256 bal1 = token1.balanceOf(address(this));
 
