Update 037 自动做市商_恒定乘积 - 推导0.md

--- a/courses/037 自动做市商_恒定乘积 - 推导0.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导0.md
@@ -10,7 +10,7 @@
 
 #### 使用"默认恒定"公式
 - $x·y = (x + △x)·(y + △y)$
-- $△y = (△x · y) / (x + △x)$
+- $△y = \frac{(△x · y)}{(x + △x)}$
 - $△y = (△x · y)·(100$\% - 0.3\%) / (x + △x)
 - $△y = (△x · y)·(99.7$\%) / (x + △x)
 - $△y = (△x · y)·997 / (x + △x)·1000$
