Update 037 自动做市商_恒定乘积 - 推导0.md

--- a/courses/037 自动做市商_恒定乘积 - 推导0.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导0.md
@@ -21,7 +21,7 @@
 -
 - $△y = \frac{(△x · y)}{(x + △x)}$
 -
-- $△y = \frac{(△x · y)·(100$\% - 0.3\%)}{(x + △x)}$
+- $△y = \frac{(△x · y)·(100$\% - 0.3\%)}{(x + △x)}
 -
 - $△y = \frac{(△x · y)·(99.7\%)}{(x + △x)}$
 -
