Update 037 自动做市商_恒定乘积 - 推导0.md

--- a/courses/037 自动做市商_恒定乘积 - 推导0.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导0.md
@@ -22,6 +22,7 @@
 - $△y = \frac{(△x · y)}{(x + △x)}$
 -
 - $△y = \frac{(△x · y)·(100\% - 0.3\%)}{(x + △x)}$
+- $\Delta y = \frac{(\Delta x \cdot y) \cdot (100\% - 0.3\%)}{(x + \Delta x)}$
 -
 - $△y = \frac{(△x · y)·(99.7\%)}{(x + △x)}$
 -
