--- a/courses/037 自动做市商_恒定乘积 - 推导0.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导0.md
@@ -21,8 +21,8 @@
 -
 - $△y = \frac{(△x · y)}{(x + △x)}$
 -
-- $△y = $\frac{(△x · y)·(100\% - 0.3\%)}{(x + △x)}$
+- $△y = \frac{(△x · y)·(1 - 0.003)}{(x + △x)}$
 -
-- $△y = \frac{(△x · y)·(99.7\%)}{(x + △x)}$
+- $△y = \frac{(△x · y)·(0.997)}{(x + △x)}$
 -
 - $△y = (△x · y)·997 / (x + △x)·1000$
