Update 037 自动做市商_恒定乘积 - 推导0.md

--- a/courses/037 自动做市商_恒定乘积 - 推导0.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导0.md
@@ -25,4 +25,4 @@
 -
 - $△y = \frac{(△x · y)·(0.997)}{(x + △x)}$
 -
-- $△y = (△x · y)·997 / (x + △x)·1000$
+- $△y = \frac{(△x · y)·997}{(x + △x)·1000}$
