Update 037 自动做市商_恒定乘积 - 推导0.md

--- a/courses/037 自动做市商_恒定乘积 - 推导0.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导0.md
@@ -20,7 +20,7 @@
 - △y·(x+△x) = △x·y
 -
 - $△y = \frac{(△x · y)}{(x + △x)}$
--
+- 加入手续费
 - $△y = \frac{(△x · y)·(1 - 0.003)}{(x + △x)}$
 -
 - $△y = \frac{(△x · y)·(0.997)}{(x + △x)}$
