Update 037 自动做市商_恒定乘积 - 推导1.md

--- a/courses/037 自动做市商_恒定乘积 - 推导1.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导1.md
@@ -8,7 +8,7 @@
 
 　
 
-####  使用"比例恒定"公式，来限制 输入代币数量 的关系：
+#### 使用"比例恒定"公式，来限制 输入代币数量 的关系：
 - $\frac{x}{y} = \frac{(x + △x)}{(y + △y)}$
 - 
 - $△x = △y · \frac{x}{y}$
@@ -16,7 +16,7 @@
 - $△y = △x · \frac{y}{x}$
 
 
-####  "流动性对等"公式
+#### "流动性对等"公式，推导出shares的值
 - $\frac{L0}{L1} = \frac{totalSupply}{(totalSupply + shares)}$
 - 
 - $shares = totalSupply · \frac{(L1 - L0)}{L0}$
