Update 037 自动做市商_恒定乘积 - 推导1.md

--- a/courses/037 自动做市商_恒定乘积 - 推导1.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导1.md
@@ -8,7 +8,7 @@
 
 　
 
-#### 使用"比例恒定"公式，来限制 输入代币数量 的关系：
+#### 使用"比例恒定"公式，推导出：△x于△y的关系
 - $\frac{x}{y} = \frac{(x + △x)}{(y + △y)}$
 - 
 - $△x = △y · \frac{x}{y}$
