--- a/courses/037 自动做市商_恒定乘积 - 推导1.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导1.md
@@ -1,5 +1,5 @@
 
-#### 详细推导```function addLiquidity```的数学计算
+### 详细推导```function addLiquidity```的数学计算
 #### 基础数据介绍
 - $L0 = \sqrt{x ·y}$，代表当前流动性池子的价值 (单位：流动性份额)
 - $L1 = \sqrt{(△x+x) ·(△y+y)}$，代表添加代币后流动性池子的价值 (单位：流动性份额)
@@ -8,7 +8,7 @@
 
 　
 
-#### 使用"比例恒定"公式，推导出：△x于△y的关系
+#### 使用"比例恒定"公式，推导出：△x与△y的关系
 - $\frac{x}{y} = \frac{(x + △x)}{(y + △y)}$
 - 
 - $△x = △y · \frac{x}{y}$
