--- a/courses/037 自动做市商_恒定乘积 - 推导1.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导1.md
@@ -1,5 +1,5 @@
 
-### 详细推导```function addLiquidity```的数学计算
+### 详细推导```function addLiquidity(uint256 _amount0, uint256 _amount1)```的数学计算
 #### 基础数据介绍
 - $L0 = \sqrt{x ·y}$，代表当前流动性池子的价值 (单位：流动性份额)
 - $L1 = \sqrt{(△x+x) ·(△y+y)}$，代表添加代币后流动性池子的价值 (单位：流动性份额)
