--- a/courses/037 自动做市商_恒定乘积 - 推导0.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导0.md
@@ -1,5 +1,5 @@
 
-### 详细推导```function swap```的数学计算
+### 详细推导```function swap(address _tokenIn, uint256 _amountIn)```的数学计算
 #### 基础数据介绍
 - $x$，代表当前流动池现有的代币A
 - $y$，代表当前流动池现有的代币B
