--- a/courses/036 自动做市商_恒定乘积.md
+++ b/courses/036 自动做市商_恒定乘积.md
@@ -104,19 +104,7 @@ contract CPAMM {
         (IERC20 tokenIn, IERC20 tokenOut, uint256 reserveIn, uint256 reserveOut)
         = isToken0
             ? (token0, token1, reserve0, reserve1)
-            : (token1, token0, reserve1, reserve0);
-
-        /*
-            - 交换操作，通常会产生手续费，本示例中为"千分之三"
-
-            - 使用"恒定"公式，作为推演出发点
-            =>  𝑥 × 𝑦 = k
-            =>  (𝑥 + △𝑥) × (𝑦 - △𝑦) = k
-            =>  △𝑦 = (△𝑥 × 𝑦) / (𝑥 + △𝑥)
-            =>  △𝑦 = (△𝑥 × 𝑦 x (100% - 0.3%)) / (𝑥 + △𝑥)
-            =>  △𝑦 = (△𝑥 × 𝑦 x 99.7%) / (𝑥 + △𝑥)
-            =>  △𝑦 = (△𝑥 × 𝑦 x 997) / (𝑥 + △𝑥) x 1000
-        */             
+            : (token1, token0, reserve1, reserve0);          
 
         // 把用户的代币，使用"授权转账"到合约
         tokenIn.transferFrom(msg.sender, address(this), _amountIn);
@@ -142,29 +130,6 @@ contract CPAMM {
             - 在调取前，通常会提示用户，"授权给该合约足额的代币"
             - 在调取前，通常会提示用户只需要输入一种代币的数量，而另一种代币的数量会根据当前的储备比例自动计算。这样就避免了用户需要手动计算比例的问题，使得过程更加直观和用户友好。
             - 用户让合约操控自己的两种代币，为自己增加了"流动性份额"，也增加了"合约的代币储备量"
-
-            - 基础数据介绍
-            L0 = √(𝑥 x 𝑦)                           = "开根号"，代表当前流动性池子的价值         (单位：流动性份额)
-            L1 = √((𝑥 + △𝑥) × (𝑦 + △𝑦))            = "开根号"，代表添加代币后流动性池子的价值    (单位：流动性份额)
-            shares                                  = 需要为用户增加的"流动性份额"               (单位：流动性份额)
-            totalSupply                             = 总流动性份额                              (单位：流动性份额)
-
-            - 说明：使用代币数量，指向流动性价值，使用"开根号"的原因是，因为"开根号"可以更好的表达线性，如果去掉"开根号"，那么流动性的表达就是抛物线。
-
-            - 使用"比例恒定"公式，来限制 输入代币量 的关系：
-            =>  (𝑥 + △𝑥) × (𝑦 + △𝑦) = k
-            =>  𝑥 / 𝑦 = (𝑥 + △𝑥) / (𝑦 + △𝑦)
-            =>  △𝑥 = △𝑦 x 𝑥 / 𝑦
-            =>  △𝑦 = △𝑥 x 𝑦 / 𝑥
-
-            - "流动性对等"公式
-            => L0 / L1 = totalSupply / (totalSupply + shares)
-            => shares = totalSupply x (L1 - L0) / L0
-            => shares = ......(详细推导过程，见037)
-            => shares = totalSupply x △𝑥 / 𝑥
-            => shares = totalSupply x △𝑦 / 𝑦
-
-            - 为了防止用户提供的流动性过大，一般结论为取以上2个shares的较小值。
         */
 
         if (reserve0 > 0 || reserve1 > 0) {
@@ -199,9 +164,9 @@ contract CPAMM {
     {
         /*
             - 基础数据介绍
-            L = √(𝑥 x 𝑦)                            = "开根号"，代表当前流动性池子的价值         (单位：流动性份额)
-            △L = √(△𝑥 x △𝑦)                       = "开根号"，代表添加最终返还流动性池子的价值    (单位：流动性份额)
-            shares                                  = 需要为用户增加的"流动性份额"               (单位：流动性份额)
+            L = √(𝑥 x 𝑦)                            = 代表当前流动性池子的价值         (单位：流动性份额)
+            △L = √(△𝑥 x △𝑦)                       = 代表"返还给用户的代币，它所指向的流动性池子的价值"    (单位：流动性份额)
+            shares                                  = 用户退还的"流动性份额"               (单位：流动性份额)
             totalSupply                             = 总流动性份额                              (单位：流动性份额)            
         */
 
