--- a/courses/037 自动做市商_恒定乘积 - 推导2.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导2.md
@@ -1,10 +1,10 @@
 
-### 详细推导```function addLiquidity(uint256 _amount0, uint256 _amount1)```的数学计算
+### 详细推导```function removeLiquidity(uint256 _shares)```的数学计算
 #### 基础数据介绍
-- $L0 = \sqrt{x ·y}$，代表"当前流动池中代币的价值" (单位：流动性份额)
-- $L1 = \sqrt{(△x+x) ·(△y+y)}$，代表"添加代币后，流动池中代币的价值" (单位：流动性份额)
-- $shares$，代表用户增加的"流动性份额" (单位：流动性份额)
-- $totalSupply$，总流动性份额 (单位：流动性份额)
+- $L = \sqrt{x ·y}$，代表"当前流动性池子的价值" (单位：流动性份额)
+- $△L = \sqrt{△x·△y}$，代表"返还给用户的代币，它所指向的流动池的价值"    (单位：流动性份额)
+- $shares$，代表用户退还的"流动性份额" (单位：流动性份额)
+- $totalSupply$，代表总流动性份额 (单位：流动性份额)
 
 　
 
@@ -48,4 +48,3 @@
 - $shares = totalSupply · (\frac{△y}{y})$
 - 如果换成x系数
 - $shares = totalSupply · (\frac{△x}{x})$
-- 为了防止用户提供的流动性过大，一般结论为取以上2个shares的较小值。
