Update 037 自动做市商_恒定乘积 - 推导2.md

--- a/courses/037 自动做市商_恒定乘积 - 推导2.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导2.md
@@ -17,7 +17,7 @@
 
 
 #### "流动性对等"公式，推导出shares的值
-- $\frac{L0}{L1} = \frac{totalSupply}{(totalSupply + shares)}$
+- $\frac{L}{△L} = \frac{totalSupply}{shares}$
 - 
 - $shares = totalSupply · \frac{(L1 - L0)}{L0}$
 - 代入流动性价值等式
