--- a/courses/037 自动做市商_恒定乘积 - 推导2.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导2.md
@@ -19,7 +19,7 @@
 #### 使用"流动性对等"公式，推导出：△x和△y的值
 - $\frac{L}{△L} = \frac{totalSupply}{shares}$
 - 
-- $shares = totalSupply · \frac{(L1 - L0)}{L0}$
+- $△L = L·\frac{shares}{totalSupply}$
 - 代入流动性价值等式
 - $shares = totalSupply · \frac{\sqrt{(△x+x) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
 - 
