--- a/courses/037 自动做市商_恒定乘积 - 推导2.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导2.md
@@ -21,7 +21,7 @@
 - 
 - $△L = L·\frac{shares}{totalSupply}$
 - 代入流动性价值等式
-- $shares = totalSupply · \frac{\sqrt{(△x+x) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
+- $\sqrt{△x·△y} = \sqrt{x·y}·(\farc{shares}{totalSupply})$
 - 
 - 使用 $△x = △y · \frac{x}{y}$
 -
