--- a/courses/037 自动做市商_恒定乘积 - 推导2.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导2.md
@@ -23,9 +23,9 @@
 - 代入流动性价值等式
 - $\sqrt{△x·△y} = \sqrt{x·y}·(\frac{shares}{totalSupply})$
 - 
-- 使用 $△x = △y · \frac{x}{y}$
+- 使用 $△y = △x · \frac{y}{x}$
 -
-- $shares = totalSupply · \frac{\sqrt{(△y · \frac{x}{y}+x) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
+- $\sqrt{△x·△x·\frac{y}{x}} = \sqrt{x·y}·(\frac{shares}{totalSupply})$
 -
 - $shares = totalSupply · \frac{\sqrt{(x·\frac{△y}{y}+x) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
 - 
