--- a/courses/037 自动做市商_恒定乘积 - 推导2.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导2.md
@@ -27,6 +27,8 @@
 -
 - $\sqrt{△x·△x·\frac{y}{x}} = \sqrt{x·y}·(\frac{shares}{totalSupply})$
 -
+- $\sqrt{△x^2·\frac{y}{x}} = \sqrt{x·y}·(\frac{shares}{totalSupply})$
+-
 - $shares = totalSupply · \frac{\sqrt{(x·\frac{△y}{y}+x) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
 - 
 - $shares = totalSupply · \frac{\sqrt{x·(\frac{△y}{y}+1) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
