--- a/courses/037 自动做市商_恒定乘积 - 推导2.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导2.md
@@ -29,7 +29,7 @@
 -
 - $\sqrt{△x^2·\frac{y}{x}} = \sqrt{x·y}·(\frac{shares}{totalSupply})$
 -
-- $\frac{\sqrt{△x^2·y}}{\sqrt{x}} = \sqrt{x}·\sqrt{x}·(\frac{shares}{totalSupply})$
+- $\frac{\sqrt{△x^2·y}}{\sqrt{x}} = \sqrt{x}·\sqrt{y}·(\frac{shares}{totalSupply})$
 -
 - $shares = totalSupply · \frac{\sqrt{(x·\frac{△y}{y}+x) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
 - 
