Update 037 自动做市商_恒定乘积 - 推导2.md

--- a/courses/037 自动做市商_恒定乘积 - 推导2.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导2.md
@@ -31,6 +31,8 @@
 -
 - $\frac{\sqrt{△x^2·y}}{\sqrt{x}} = \sqrt{x}·\sqrt{y}·(\frac{shares}{totalSupply})$
 -
+- $\frac{\sqrt{△x^2·y}}{\sqrt{x}}·\sqrt{x} = \sqrt{x}·\sqrt{x}·\sqrt{y}·(\frac{shares}{totalSupply})$
+-
 - $shares = totalSupply · \frac{\sqrt{(x·\frac{△y}{y}+x) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
 - 
 - $shares = totalSupply · \frac{\sqrt{x·(\frac{△y}{y}+1) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
