Update 037 自动做市商_恒定乘积 - 推导2.md

--- a/courses/037 自动做市商_恒定乘积 - 推导2.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导2.md
@@ -35,6 +35,8 @@
 -
 - $\sqrt{△x^2·y} = x·\sqrt{y}·(\frac{shares}{totalSupply})$
 -
+- $△x·\sqrt{y} = x·\sqrt{y}·(\frac{shares}{totalSupply})$
+-
 - $shares = totalSupply · \frac{\sqrt{(x·\frac{△y}{y}+x) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
 - 
 - $shares = totalSupply · \frac{\sqrt{x·(\frac{△y}{y}+1) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
