--- a/courses/037 自动做市商_恒定乘积 - 推导2.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导2.md
@@ -36,25 +36,5 @@
 - $\sqrt{△x^2·y} = x·\sqrt{y}·(\frac{shares}{totalSupply})$
 -
 - $△x·\sqrt{y} = x·\sqrt{y}·(\frac{shares}{totalSupply})$
--
-- $shares = totalSupply · \frac{\sqrt{(x·\frac{△y}{y}+x) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
 - 
-- $shares = totalSupply · \frac{\sqrt{x·(\frac{△y}{y}+1) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
-- 
-- $shares = totalSupply · \frac{\sqrt{x·(\frac{△y}{y}+1) ·\frac{y·(△y+y)}{y}} - \sqrt{x ·y}}{\sqrt{x ·y}}$
-- 
-- $shares = totalSupply · \frac{\sqrt{x·(\frac{△y}{y}+1) ·y· (\frac{△y}{y}+1)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
--
-- $shares = totalSupply · \frac{\sqrt{x·y·(\frac{△y}{y}+1)·(\frac{△y}{y}+1)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
--
-- $shares = totalSupply · \frac{\sqrt{x·y·(\frac{△y}{y}+1)^2} - \sqrt{x ·y}}{\sqrt{x ·y}}$
--
-- $shares = totalSupply · \frac{\sqrt{x·y}· \sqrt{(\frac{△y}{y}+1)^2} - \sqrt{x ·y}}{\sqrt{x ·y}}$
--
-- $shares = totalSupply · (\sqrt{(\frac{△y}{y}+1)^2} - 1)$
--
-- $shares = totalSupply · (\frac{△y}{y}+1 - 1)$
--
-- $shares = totalSupply · (\frac{△y}{y})$
-- 如果换成x系数
-- $shares = totalSupply · (\frac{△x}{x})$
+- $△x = x·(\frac{shares}{totalSupply})$
