Update 037 自动做市商_恒定乘积 - 推导2.md

--- a/courses/037 自动做市商_恒定乘积 - 推导2.md
+++ b/courses/037 自动做市商_恒定乘积 - 推导2.md
@@ -38,3 +38,5 @@
 - $△x·\sqrt{y} = x·\sqrt{y}·(\frac{shares}{totalSupply})$
 - 
 - $△x = x·(\frac{shares}{totalSupply})$
+- 换成系数y
+- $△y = y·(\frac{shares}{totalSupply})$
