--- a/courses/037 自动做市商_恒定乘积_推导1.md
+++ b/courses/037 自动做市商_恒定乘积_推导1.md
@@ -16,7 +16,7 @@
 - $△y = △x · \frac{y}{x}$
 
 
-#### "流动性对等"公式，推导出shares的值
+#### 使用"流动性对等"公式，推导出shares的值
 - $\frac{L0}{L1} = \frac{totalSupply}{(totalSupply + shares)}$
 - 
 - $shares = totalSupply · \frac{(L1 - L0)}{L0}$
