--- a/courses/037 自动做市商_恒定乘积_推导1.md
+++ b/courses/037 自动做市商_恒定乘积_推导1.md
@@ -26,11 +26,11 @@
 - 使用 $△x = △y · \frac{x}{y}$
 -
 - $shares = totalSupply · \frac{\sqrt{(△y · \frac{x}{y}+x) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
--
+- 开始变魔术，准备提炼出 $\frac{△y}{y}+1$
 - $shares = totalSupply · \frac{\sqrt{(x·\frac{△y}{y}+x) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
 - 
 - $shares = totalSupply · \frac{\sqrt{x·(\frac{△y}{y}+1) ·(△y+y)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
-- 
+- 开始变魔术，准备提炼出 $\frac{△y}{y}+1$
 - $shares = totalSupply · \frac{\sqrt{x·(\frac{△y}{y}+1) ·\frac{y·(△y+y)}{y}} - \sqrt{x ·y}}{\sqrt{x ·y}}$
 - 
 - $shares = totalSupply · \frac{\sqrt{x·(\frac{△y}{y}+1) ·y· (\frac{△y}{y}+1)} - \sqrt{x ·y}}{\sqrt{x ·y}}$
