--- a/courses/038 自动做市商_恒定乘积_推导1.md
+++ b/courses/038 自动做市商_恒定乘积_推导1.md
@@ -3,7 +3,7 @@
 #### 基础数据介绍
 - $L0 = \sqrt{x ·y}$，代表"当前流动池中代币的价值" (单位：流动性份额)
 - $L1 = \sqrt{(△x+x) ·(△y+y)}$，代表"添加代币后，流动池中代币的价值" (单位：流动性份额)
-- $shares$，代表用户增加的"流动性份额" (单位：流动性份额)
+- $shares$，代表需要为用户新增的"流动性份额" (单位：流动性份额)
 - $totalSupply$，总流动性份额 (单位：流动性份额)
 
 　
