--- a/courses/036 自动做市商_恒定总和_推导1.md
+++ b/courses/036 自动做市商_恒定总和_推导1.md
@@ -5,3 +5,8 @@
 - $(x + y)$，代表合约中现存的代币数量 (单位：代币数量)
 - $shares$，代表需要为用户新增的"流动性份额" (单位：流动性份额)
 - $totalSupply$，总流动性份额 (单位：流动性份额)
+
+　
+
+#### 使用"增量对比"公式，推导出shares的值
+- $\frac{(x + y)}{(x + y) + (△x + △y)} = \frac{totalSupply}{totalSupply + shares}$
