--- a/courses/036 自动做市商_恒定总和_推导1.md
+++ b/courses/036 自动做市商_恒定总和_推导1.md
@@ -10,3 +10,15 @@
 
 #### 使用"增量对比"公式，推导出shares的值
 - $\frac{(x + y)}{(x + y) + (△x + △y)} = \frac{totalSupply}{totalSupply + shares}$
+-
+- $(totalSupply + shares) · (x + y) = totalSupply · (x + y + △x + △y)$
+-
+- $(totalSupply + shares) · (x + y) = totalSupply · (x + y) + totalSupply · (△x + △y)$
+-
+- $\frac{(totalSupply + shares) · (x + y)}{(x + y)} = \frac{totalSupply·(x + y) + totalSupply·(△x + △y)}{(x + y)}$
+-
+- $totalSupply + shares = totalSupply·\farc{(x + y)}{(x + y)} + totalSupply·\farc{(△x + △y)}{(x + y)}$
+-
+- $totalSupply + shares = totalSupply + totalSupply · \frac{(△x + △y)}{(x + y)}$
+-
+- $shares = totalSupply · \frac{(△x + △y)}{(x + y)}$
